# shooter3d-v2.1

./: LICENSE  README.md
v2.1/fps-game/: .gitignore  CMakeLists.txt  LICENSE  PROJECT_SUMMARY.md  README.md
v2.1/fps-game/.github/workflows/: build.yml
v2.1/fps-game/cmake/: Toolchain-mingw64.cmake
v2.1/fps-game/include/core/: Input.hpp  Logger.hpp  Timer.hpp  Window.hpp
v2.1/fps-game/include/game/: Enemy.hpp  Entity.hpp  GameWorld.hpp  HUD.hpp  Level.hpp  Player.hpp  Projectile.hpp  Weapon.hpp
v2.1/fps-game/include/math/: Math.hpp
v2.1/fps-game/include/renderer/: Camera.hpp  Mesh.hpp  ParticleSystem.hpp  Renderer.hpp  Shader.hpp  Texture.hpp
v2.1/fps-game/scripts/: build_linux.sh  build_windows.sh  fetch_deps.sh
v2.1/fps-game/src/: main.cpp
v2.1/fps-game/src/core/: Input.cpp  Logger.cpp  Timer.cpp  Window.cpp
v2.1/fps-game/src/renderer/: Camera.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
v2.2/: DOWNLOAD_THIS.txt  fps_game_README.txt
v2.2/main/fps_game/: CMakeLists.txt  README.md  WHATS_NEW.txt  build.sh  build_portable.sh  build_windows.bat  download_sdl2.sh
v2.2/main/fps_game/src/engine/: Mesh.cpp  Mesh.h  Renderer.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h
v2.2/main/fps_game/src/game/: Level.cpp  Level.h  Particle.h  Weapon.cpp
v3/fps_game_fixed/: BUILD_GUIDE.md  FILE_MANIFEST.txt  INSTALL_NOTES.txt  PROJECT_STRUCTURE.txt  START_HERE.md  build-windows.sh  download_sdl2_windows.bat
v3/fps_game_fixed/src/: main.cpp
v3/fps_game_fixed/src/engine/: Mesh.h  Renderer.cpp  Shader.h
v3/fps_game_fixed/src/game/: Enemy.cpp  Enemy.h  Game.cpp
v4/fps_game_fixed/: .gitignore  CMakeLists.txt  PORTABLE_BUILD_GUIDE.md  setup_glm.sh
v4/fps_game_fixed/src/engine/: Camera.cpp  Renderer.h  Texture.h  Window.cpp  Window.h
v4/fps_game_fixed/src/game/: Game.h  Particle.cpp  Particle.h  Player.cpp  Player.h  Weapon.cpp
v5/fps_game_fixed/: CMakeLists.txt  COMPLETE_SUMMARY.md  COMPLETE_SUMMARY_V2.md  PORTABLE_QUICK_REF.txt  QUICKSTART.md  build_portable.sh  build_portable_windows.bat  install_deps.sh  setup_deps.sh  toolchain-mingw.cmake
v5/fps_game_fixed/src/: main.cpp
v5/fps_game_fixed/src/engine/: Camera.h  Shader.cpp  Texture.cpp
v5/fps_game_fixed/src/game/: Level.h  Weapon.h
